--- a/console.html
+++ b/console.html
@@ -5,54 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--CSS-->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/home.css" />
-
-    <!--Title & Icon-->
+    <!-- page title & icon -->
     <title>Console</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
+
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
-    <div class="container-fluid">
-        <div class="row mt-2 mb-2">
-            <div class="col-12">
-                <img id="add-table" class="roundness p-2 mr-4" src="img/button/add.svg">
-                <img id="remove-table" class="roundness p-2" src="img/button/delete.svg">
-            </div>
-        </div>
+<body style="overflow-x:hidden">
+    
+    <!-- main container -->
+    <div class="container-fluid"></div>
 
-        <!-- Upload button
-        <div class="row ml-auto">
-                <div class="col">
-                    <button id="upload" class="btn mt-2 mb-2"
-                        style="border-radius:50%; background-color: #003b5c; color: white;"
-                        type="button" name="upload">&oplus;</button>
-                </div>
-        </div>-->
-
-        <!-- Used to append tables-->
-        <div id="record"></div>
-
-        <div class="custom-file">
-                <input id="upload" type="file" class="custom-file-input" id="upload" accept=".csv">
-                <label id="uploadLabel" class="custom-file-label" for="upload">Choose file</label>
-        </div>
-
-        <!-- Table -->
         <div class="row">
-            <div class="col">
-                <div>
-                    <div id="tables"></div>
+            <!-- side panel -->
+            <div class="col-lg-3 col-md-4 col-sm-4" style="background-color: #242424;">
+                <!-- title -->
+                <div class="row">
+                    <div class="col text-center mt-4">
+                        <h2 style="color:white; font-weight: 100;">
+                            Developer<br>Console
+                        </h2>
+                    </div>
+                </div>
+                <!-- wits image-->
+                <div class="row">
+                    <div class="col text-center mt-2 mb-4">
+                        <img class="img-fluid w-75" src="img/asset/wits-logo.png">
+                    </div>
+                </div>
+                <!-- divider -->
+                <div class="row">
+                    <div class="col mt-1" style="background-color: rgb(128, 128, 128)"></div>
+                </div>
+                <!-- divider -->
+                <div class="row">
+                    <div class="col mt-4" style="background-color: #242424"></div>
+                </div>
+                <!-- buttons -->
+                <div class="row"> <!--update-->
+                    <div class="col text-center">
+                        <button class="btn btn-outline-secondary w-100 m-2 p-3"
+                            style="color: #fff; font-weight: 100" type="button" 
+                            id="upload-button">UPDATE</button>
+                    </div>
+                </div>
+                <div class="row"> <!-- insert -->
+                    <div class="col text-center">
+                        <button class="btn btn-outline-secondary w-100 m-2 p-3"
+                            style="color: #fff; font-weight: 100" type="button" 
+                            id="insert-button">INSERT</button>
+                    </div>
+                </div>
+                <div class="row"> <!-- docs -->
+                    <div class="col text-center">
+                        <button class="btn btn-outline-secondary w-100 m-2 p-3"
+                            style="color: #fff; font-weight: 100" type="button" 
+                            id="docs-button">DOCS</button>
+                    </div>
+                </div>
+                <div class="row"> <!-- architecture -->
+                    <div class="col text-center">
+                        <button class="btn btn-outline-secondary w-100 m-2 p-3"
+                            style="color: #fff; font-weight: 100" type="button" 
+                            id="insert-button">ARCHITECTURE</button>
+                    </div>
+                </div>
+                <div class="row"> <!-- exit -->
+                    <div class="col text-center">
+                        <button class="btn btn-outline-secondary w-100 m-2 p-3"
+                            style="color: #fff; font-weight: 100" type="button" 
+                            id="insert-button">EXIT</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="ml-2" style="font-weight:100; color: #fff">
+                            >>> Signed in as, John Doe
+                        </p>
+                    </div>
                 </div>
             </div>
+            <!-- content area -->
+            <div class="col-lg-9 col-md-8 col-sm-8">
+
+            </div>
         </div>
+
     </div>
 
-    <!-- Scripts -->
+    <!-- scripts-->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/popper.min.js"></script>
-    <script src="js/home.js"></script>
 </body>
 </html>
