--- a/java/src/java_testing_page.html
+++ b/java/src/java_testing_page.html
@@ -20,3 +20,21 @@
 </applet>
 <hr>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
+
+<p>Click the button to create a File Upload Button.</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<script>
+    function myFunction() {
+        var x = document.createElement("INPUT");
+        x.setAttribute("type", "file");
+        document.body.appendChild(x);
+    }
+</script>
+
+</body>
+</html>
