--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
 <section class="w3-row-padding w3-center w3-light-grey">
     <article class="w3-third">
         <p>Suliman Momoniat(Scrum Master)</p>
-        <img src="img/faces/face-1.jpg" alt="Suliman" style="width:100%">
+        <img src="img/team/Suliman.jpg" alt="Suliman" style="width:100%">
 
     </article>
     <article class="w3-third">
