--- a/java/src/java_testing_page.html
+++ b/java/src/java_testing_page.html
@@ -1,30 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>JavaTesting</title>
+    <meta charset="utf-8">
+    <title>File API</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="Algo" method="get">
-        Name: <input type="text" name="Username"><br>
-        Surname : <input type="text" name="Surname"><br>
-        <input type="submit" value="submit">
+<div id="page-wrapper">
 
-    </form>
-</body>
-<title>The Hello, World Applet</title>
-<hr>
-<applet code = "Algo.class" width = "320" height = "120">
-    If your browser was Java-enabled, a "Hello, World"
-    message would appear here.
-</applet>
-<hr>
-</html>
-<!DOCTYPE html>
-<html>
-<body>
-<script type="text/javascript" src="static/js/read-csv.js"></script>
-<input type="file" id="csvFileInput" onchange="handleFiles(this.files)"
-       accept=".csv">
+    <h1>Text File Reader</h1>
+    <div>
+        Select a text file:
+        <input type="file" id="fileInput" accept="text/csv">
+    </div>
+    <pre id="fileDisplayArea"></pre>
+
+</div>
+
+<script src="text.js"></script>
 </body>
 </html>
