--- a/java/src/java_testing_page.html
+++ b/java/src/java_testing_page.html
@@ -13,5 +13,5 @@
 <h1>File Upload Drop Zone</h1>
 <div  id="drop_zone" ondrop="drag_drop(event)" ondragover="return false" ></div>
 <input type="file"  id="fileInput">
-<script src="text.js"></script>
+<script src="assets/js/uploadFunctions.js"></script>
 <pre id="fileDisplayArea"></pre>
