initialising port to bootstrap 4

--- a/upload.html
+++ b/upload.html
@@ -13,16 +13,20 @@
 </head>
 <body>
 
-    <!---->
-    <div class="row p-4">
-        <div class="col-10">
-            <div class="custom-file">
-                <input id="file-input" type="file" class="custom-file-input w-100" id="customFile">
-                <label id="file-input-label" class="custom-file-label" for="customFile">Choose file</label>
+    <div class="container-fluid">
+        <!-- upload bar-->
+        <div class="row p-4">
+            <!-- upload -->
+            <div class="col-10">
+                <div class="custom-file">
+                    <input id="file-input" type="file" class="custom-file-input w-100" id="customFile">
+                    <label id="file-input-label" class="custom-file-label" for="customFile">Choose file</label>
+                </div>
             </div>
-        </div>
-        <div class="col-2">
-
+            <!-- publish button-->
+            <div class="col-2">
+            
+            </div>
         </div>
     </div>
     
