pushing latest proto

--- a/proto/pages/home.html
+++ b/proto/pages/home.html
@@ -24,3 +24,73 @@
         </ul>
     </div>
 </nav>
+
+<!-- two column layout -->
+<div class="row m-2">
+    <div class="col-8 p-0">
+        <!-- profile and grade summray -->
+        <div class="row">
+            <div class="col pr-0 mr-1">
+                <!-- profile -->
+                <div id="profile-card" class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h4 id="profile-heading" style="font-weight:100">Welcome</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col pl-0 ml-1 mr-1">
+                <!-- summary -->
+                <div id="recent-card" class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h4 style="font-weight:100">Assessments</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- graph summary -->
+        <div class="row">
+            <div class="col">
+                <div id="graph-card" class="card mt-2 mr-1">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <!-- heading -->
+                                <div class="row">
+                                    <div class="col">
+                                        <h4 id="summary-heading" style="font-weight:100">Recent : </h4>
+                                    </div>
+                                    <div class="col">
+                                        <h4 id="summary-date" style="font-weight:100; text-align: right"><i class="fa fa-table"></i> 12 September 2018</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- notitfication and calendar -->
+    <div class="col-4 p-0">
+        <div id="notification-card" class="card ml-1">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h4 style="font-weight:100">Notifications</h4>
+                        awe
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
