--- a/proto/index.html
+++ b/proto/index.html
@@ -74,5 +74,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
+    <script src="js/google.charts.js"></script>
 </body>
 </html>
