--- a/dashboard/pages/statistics.html
+++ b/dashboard/pages/statistics.html
@@ -1,4 +1,5 @@
 <!-- navbar -->
+<!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <!-- toggle button -->
     <!-- onmousedown="event.preventDefault()" prevents button from staying clicked -->
@@ -6,21 +7,37 @@
         <i class="fa fa-bars"></i>
     </button>
     <a class="navbar-brand ml-3">{{ title }}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Togglernavigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div id="navbarNav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Team</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Wiki</a>
-            </li>
-        </ul>
-    </div>
+    <!-- drop down will be here-->
+    <button id="outline-button" ng-click="refresh()" type="button" class="ml-auto" type="button"
+        onmousedown="event.preventDefault()">Refresh</button>
 </nav>
+
+<!-- four pane layout-->
+<div class="row mt-2">
+    <div class="col pr-0">
+        <div class="card ml-2 mr-1 stretch-card-top">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+    <div class="col pl-0">
+        <div class="card mr-2 ml-1 stretch-card-top">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row mt-2">
+    <div class="col pr-0">
+        <div class="card ml-2 mr-1 stretch-card-bottom">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+    <div class="col pl-0">
+        <div class="card mr-2 ml-1 stretch-card-bottom">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+</div>
