--- a/dashboard/pages/upload-marks.html
+++ b/dashboard/pages/upload-marks.html
@@ -5,7 +5,7 @@
     <button onmousedown="event.preventDefault()" ng-click="sidebar()" id="sidebarCollapse" type="button">
         <i class="fa fa-bars"></i>
     </button>
-    <a class="navbar-brand ml-3">{{ title }}</a>
+    <a class="navbar-brand ml-3 mr-auto">{{ title }}</a>
     <button id="outline-button" ng-click="publish()" type="button" class="ml-auto" type="button"
         onmousedown="event.preventDefault()">Publish</button>
 </nav>
