--- a/dashboard/pages/statistics.html
+++ b/dashboard/pages/statistics.html
@@ -6,7 +6,7 @@
     <button onmousedown="event.preventDefault()" ng-click="sidebar()" id="sidebarCollapse" type="button">
         <i class="fa fa-bars"></i>
     </button>
-    <a class="navbar-brand ml-3">{{ title }}</a>
+    <a class="navbar-brand ml-3 mr-auto">{{ title }}</a>
     <!-- drop down will be here-->
     <button id="outline-button" ng-click="refresh()" type="button" class="ml-auto" type="button"
         onmousedown="event.preventDefault()">Refresh</button>
