--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -6,4 +6,6 @@
         <i class="fa fa-bars"></i>
     </button>
     <a class="navbar-brand ml-3 mr-auto">{{ title }}</a>
+    <button ng-click="back()" type="button" class="ml-auto sidebar-collapse" type="button"
+        onmousedown="event.preventDefault()"><i class="fa fa-angle-left"></i> </button>
 </nav>
