pop up works and row click redirects

--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -7,5 +7,5 @@
     </button>
     <a class="navbar-brand ml-3 mr-auto">{{ title }}</a>
     <button ng-click="back()" type="button" class="ml-auto sidebar-collapse" type="button"
-        onmousedown="event.preventDefault()"><i class="fa fa-angle-left"></i> </button>
+        onmousedown="event.preventDefault()"><i class="fa fa-angle-left"></i>&emsp;Back to Grade Book</button>
 </nav>
