student statistics page

--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -9,3 +9,33 @@
     <button ng-click="back()" type="button" class="ml-auto sidebar-collapse" type="button"
         onmousedown="event.preventDefault()"><i class="fa fa-angle-left"></i>&emsp;Back to Grade Book</button>
 </nav>
+
+<!-- four pane layout-->
+<div class="row mt-2">
+    <div class="col pr-0">
+        <div class="card ml-2 mr-1 stretch-card-top">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+    <div class="col pl-0">
+        <div class="card mr-2 ml-1 stretch-card-top">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row mt-2">
+    <div class="col pr-0">
+        <div class="card ml-2 mr-1 stretch-card-bottom">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+    <div class="col pl-0">
+        <div class="card mr-2 ml-1 stretch-card-bottom">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+</div>
