grade book works

--- a/dashboard/pages/grade-book.html
+++ b/dashboard/pages/grade-book.html
@@ -36,15 +36,17 @@
                 <div class="row mt-3 ml-3 mr-3">
                     <div class="col-2 p-0">
                         <!-- class drop down -->
-                        <div class="nice-drop-down-menu">
-                            <select id="course-drop-down" class="form-control"></select>
-                        </div>
+                        <select class="nice-drop-down-menu" id="course-drop-down" style="width: 12vw;"></select>
                     </div>
                     <div class="col-2 p-0">
                         <!-- year drop down -->
-                        <div class="nice-drop-down-menu ml-3">
-                            <select id="year-drop-down" class="form-control"></select>
-                        </div>
+                        <select class="nice-drop-down-menu" id="year-drop-down" style="width: 12vw;">
+                            <option selected value="2018">2018</option>
+                            <option value="2017">2017</option>
+                            <option value="2016">2016</option>
+                            <option value="2015">2015</option>
+                            <option value="2014">2014</option>
+                        </select>
                     </div>
                     <div class="col-8" style="text-align:right">
                         <h4 style="font-weight:400">{{ enrolled }} enrolled students <i class="fa fa-user-o"></i></h4>
