--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -38,23 +38,23 @@
             <ul class="list-unstyled components">
                 <!-- home -->
                 <li id="home-tab">
-                    <a href="#" style="text-decoration:none"><i class="pe-7s-graph"></i>Home</a>
+                    <a href="#" style="text-decoration:none; cursor: pointer;"><i class="pe-7s-graph"></i>Home</a>
                 </li>
                 <!-- grade book -->
                 <li id="grade-book-tab">
-                    <a href="#!/grade-book" style="text-decoration: none"><i class="pe-7s-note2"></i>Grade Book</a>
+                    <a href="#!/grade-book" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-note2"></i>Grade Book</a>
                 </li>
                 <!-- statistics -->
                 <li id="statistics-tab">
-                    <a href="#!/statistics" style="text-decoration: none"><i class="pe-7s-graph3"></i>Statistics</a>
+                    <a href="#!/statistics" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-graph3"></i>Statistics</a>
                 </li>
                 <!-- upload marks -->
                 <li id="upload-marks-tab">
-                    <a href="#!/upload-marks" style="text-decoration: none"><i class="pe-7s-cloud-upload"></i>Upload Marks</a>
+                    <a href="#!/upload-marks" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-cloud-upload"></i>Upload Marks</a>
                 </li>
                 <!-- grade book -->
                 <li>
-                    <a href="#" style="text-decoration: none"><i class="pe-7s-power"></i>Logout</a>
+                    <a id="logout-button" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-power"></i>Logout</a>
                 </li>
             </ul>
         </nav>
