--- a/dashboard/pages/grade-book.html
+++ b/dashboard/pages/grade-book.html
@@ -73,8 +73,8 @@
                                         <td>{{ x.user_surname }}</td>
                                         <td>{{ x.faculty_name }}</td>
                                         <td style="text-align:center">{{ x.average }}</td>
-                                        <td><button class="more-info-button" onmousedown="event.preventDefault()"
-                                                ng-click="popup($event)" type="button"style="cursor: pointer;">
+                                        <td><button ng-click="popup($event)" id="awe" class="more-info-button" onmousedown="event.preventDefault()"
+                                                type="button"style="cursor: pointer;">
                                                     <b>MORE INFO</b>
                                         </button></td>
                                     </tr>
