--- a/dashboard/pages/home.html
+++ b/dashboard/pages/home.html
@@ -38,14 +38,14 @@
                             <div class="col">
                                 <div class="row text-center">
                                     <div class="col">
-                                        <img class="img-fluid" src="../../img/cover/profile.jpg">
+                                        <img class="img-fluid" src="./img/profile.jpg">
                                     </div>
                                 </div>
                                 <div class="row text-center">
                                     <div class="col">
                                         <img style="border-radius:50%; border: 4px solid white; width: 128px; height: 128px;
                                             margin-top: -64px" 
-                                            class="img-fluid" src="../../img/faces/face-7.jpg">
+                                            class="img-fluid" src="./img/face-7.jpg">
                                     </div>
                                 </div>
                                 <div class="row text-center">
